--- a/tmux.conf
+++ b/tmux.conf
@@ -1,2 +1,11 @@
 # Settings for <esc> key, no delay
 set -s escape-time 0
+
+# Colorscheme  prefix+I to install
+set -g @plugin 'seebi/tmux-colors-solarized'
+
+
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
