--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,7 +2,9 @@
 set -s escape-time 0
 
 # Set the second prefix 
-set-option -g prefix2 `
+unbind C-b
+set -g prefix C-o
+bind-key C-o send-prefix
 
 
 # Colorscheme  prefix+I to install
