--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,7 +8,13 @@ bind-key C-o send-prefix
 
 
 # Colorscheme  prefix+I to install
-# set -g @plugin 'seebi/tmux-colors-solarized'
+ set -g @plugin 'seebi/tmux-colors-solarized'
+
+# Tmux Resurrect
+# Uses prefix + Alt + s <- save session
+# Uses prefix + Alt + r <- restore session
+# Uses prefix :kill-server <- exit tmux
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
